# sample-data-fetcher

./: Cargo.toml  Dockerfile  README.md
data/: es_index.json  init.sh  init_es_index.sh  init_kibana_dashboard.sh  kibana.ndjson
src/: kylin_networ_api.rs  main.rs
