[package]
name = "data_fetcher"
version = "0.1.0"
authors = ["kuleleyokn42"]
edition = "2018"

[dependencies]
actix-web = "3"
pretty_env_logger = "0.3"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
json = "0.12"
chrono = "0.4"
hmac = "0.10"
sha2 = "0.9"
hex = "0.4"
reqwest = { version = "0.10", features = ["blocking", "json"] }

[[bin]]
name = "data_fetcher"
path = "src/main.rs"
